--- a/package.json
+++ b/package.json
@@ -2,11 +2,21 @@
   "name": "dev-dose-server-rails",
   "private": true,
   "dependencies": {
+    "@babel/preset-react": "^7.13.13",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.0",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "turbolinks": "^5.2.0",
+    "web-vitals": "^1.1.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
