--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@testing-library/react": "^11.2.7",
     "axios": "^0.21.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "highlight.js": "^11.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "trix": "^1.3.1",
     "turbolinks": "^5.2.0",
     "web-vitals": "^1.1.2",
     "webpack": "^4.46.0",
